--- a/launchmon/src/linux/.deps/launchmon-sdbg_rm_map.Po
+++ b/launchmon/src/linux/.deps/launchmon-sdbg_rm_map.Po
@@ -323,14 +323,14 @@ launchmon-sdbg_rm_map.o: ../sdbg_rm_map.cxx ../../../config.h \
  /usr/lib/gcc/x86_64-redhat-linux/4.4.7/../../../../include/c++/4.4.7/bits/algorithmfwd.h \
  /usr/lib/gcc/x86_64-redhat-linux/4.4.7/../../../../include/c++/4.4.7/bits/stl_heap.h \
  /usr/lib/gcc/x86_64-redhat-linux/4.4.7/../../../../include/c++/4.4.7/bits/stl_tempbuf.h \
- /usr/lib/gcc/x86_64-redhat-linux/4.4.7/../../../../include/c++/4.4.7/iostream \
  ../ini_reader.h ../sdbg_rm_map.hxx ../sdbg_std.hxx /usr/include/signal.h \
  /usr/include/bits/signum.h /usr/include/bits/siginfo.h \
  /usr/include/bits/sigaction.h /usr/include/bits/sigcontext.h \
  /usr/include/bits/sigstack.h /usr/include/sys/ucontext.h \
  /usr/include/bits/sigthread.h ../lmon_api/lmon_api_std.h \
- ../sdbg_base_symtab.hxx ../sdbg_self_trace.hxx \
- ../sdbg_base_exception.hxx
+ ../sdbg_base_symtab.hxx \
+ /usr/lib/gcc/x86_64-redhat-linux/4.4.7/../../../../include/c++/4.4.7/iostream \
+ ../sdbg_self_trace.hxx ../sdbg_base_exception.hxx
 
 ../../../config.h:
 
@@ -1066,8 +1066,6 @@ launchmon-sdbg_rm_map.o: ../sdbg_rm_map.cxx ../../../config.h \
 
 /usr/lib/gcc/x86_64-redhat-linux/4.4.7/../../../../include/c++/4.4.7/bits/stl_tempbuf.h:
 
-/usr/lib/gcc/x86_64-redhat-linux/4.4.7/../../../../include/c++/4.4.7/iostream:
-
 ../ini_reader.h:
 
 ../sdbg_rm_map.hxx:
@@ -1093,6 +1091,8 @@ launchmon-sdbg_rm_map.o: ../sdbg_rm_map.cxx ../../../config.h \
 ../lmon_api/lmon_api_std.h:
 
 ../sdbg_base_symtab.hxx:
+
+/usr/lib/gcc/x86_64-redhat-linux/4.4.7/../../../../include/c++/4.4.7/iostream:
 
 ../sdbg_self_trace.hxx:
 
