build: Update readme files and bootstrap options

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,15 +1,3 @@
-
 Dong H. Ahn
-Computer Scientist
-Phone :
-  925-422-1939
-Fax :
-  925-423-6961
-Affiliation:
-  Development Environment Group
-  Comp-Services and Develpment Division 
-Mailing Address:
-  Lawrence Livermore National Laboratory
-  L-557
-  7000 East Avenue 
-  Livermore, CA 94550
+Matt LeGendre
+Gregory Lee
