--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2016-04-30 Dong H. Ahn <ahn1@llnl.gov>
+	* list of files:
+	Modernize the use of autotools 
+	Drop support for bundling foreign library sources for easier packaging
+
+
 2014-04-30 Matt LeGendre <legendre1@llnl.gov> Dong H. Ahn <ahn1@llnl.gov>
 	* configure.ac,
 	config/x_ac_handshake.m4,
