Cray support: Added Cray XE/XK/XC support
Adapt Cray's @agontarek PR #7 to the HEAD of the master branch.

Thus, the contributor of this patch is actually Cray's @agontarek.

- ChangeLog - Added change notes.
- config/x_ac_platform.m4 - Fixed bugs/added updated support for Cray.
- configure.ac - Added pkg-config check. Newer Cray systems use pkg-config to retrieve alps dependencies.
- launchmon/src/linux/sdbg_linux_launchmon.cxx - Fixed misplaced brace bug, added support for Cray on demand MPIR proctable acquisition.
- launchmon/src/rm_alps.conf - Updated Cray RM config.
- launchmon/src/sdbg_rm_map.cxx - Added Cray support.
- launchmon/src/sdbg_rm_map.hxx - Added Cray support.
- tools/alps/src/Makefile.am - Updated Cray support.
- tools/alps/src/alps_fe_colocator.cxx - Updated Cray support.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2016-05-05 Andrew Gontarek <andrewg@cray.com>
+	*  AUTHORS,
+	config/x_ac_platform.m4,
+	configure.ac,
+	etc/rm_alps.conf,
+	launchmon/src/linux/sdbg_linux_launchmon.cxx,
+	launchmon/src/sdbg_rm_map.cxx,
+	launchmon/src/sdbg_rm_map.hxx,
+	tools/alps/src/Makefile.am,
+	tools/alps/src/alps_fe_colocator.cxx:
+	Added Cray XE/XK/XC support. 
+
 2016-05-04 Dong H. Ahn <ahn1@llnl.gov>
 	* git show --stat 42a9e 37e25 3b491 \
 	bc791 fecc9 dac19 81dcf 07417 39efd 6727:
