doc: Add RC_flux into the manpage of LMON_fe_getRMInfo

--- a/launchmon/man/LMON_fe_getRMInfo.3
+++ b/launchmon/man/LMON_fe_getRMInfo.3
@@ -29,6 +29,7 @@ to the storage holding the \fBlmon_rm_info_t\fR type:
 .B "   "RC_bgrm, "
 .B "   "RC_alps, "
 .B "   "RC_orte, "
+.B "   "RC_flux, "
 .B "   "RC_none "
 .B "} rm_catalogue_e;
 .PP
